--- a/LVLTUT/css/styles.css
+++ b/LVLTUT/css/styles.css
@@ -1,9 +1,43 @@
 /*it worked*/
+
+body{
+width: 100%;
+height: 100%;
+
+}
+#wrapper{
+	width: 100%;
+	height: 300px;
+	margin:10px;
+	background: #d3d3d3;
+}
+
+.Level_up_Tut_title{
+	
+	width: 100%;
+	height: 150px;
+	display: block;
+	margin: 10px;
+	padding-top: 40px;
+
+}
+
+
 h1{
 	color: #3B5998; /*facebook color*/
 	
 	font-size: 40px;
+	text-align: center;
+	padding: 10px 10px 0 10px;
+	margin: 10px 10px 0 10px;
 }
 p{
-	color: #00acee; /*twitter color*/
+	color:#414344; /*#00acee; twitter color*/
+	text-align: center;
+	margin:0;
+
 }
+ .content_holder{
+ 	margin:10px;
+ 	padding: 20px;
+ }
